--- a/doc.css
+++ b/doc.css
@@ -1,6 +1,3 @@
-body {
-}
-
 header {
   height: 50px;
   width: 100%;
@@ -8,8 +5,17 @@ header {
 }
 
 .left-side {
-  border: 1px solid black;
   background-color: #2e2e2e;
-  width: 150px;
+  width: 200px;
   height: 900px;
+}
+
+.nav-list {
+  color: white;
+  gap: 40px;
+  list-style: none;
+  text-decoration: none;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
 }
