--- a/doc.css
+++ b/doc.css
@@ -1,3 +1,9 @@
+body {
+  max-width: 1200px;
+  margin: 0 auto;
+  box-sizing: border-box;
+}
+
 header {
   height: 50px;
   width: 100%;
@@ -6,16 +12,35 @@ header {
 
 .left-side {
   background-color: #2e2e2e;
-  width: 200px;
+  width: 20%;
   height: 900px;
 }
 
 .nav-list {
   color: white;
   gap: 40px;
-  list-style: none;
-  text-decoration: none;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
+}
+
+.nav-list {
+  list-style: none;
+  text-decoration: none;
+  color: white;
+}
+
+.content {
+  display: flex;
+}
+
+.gallery-img {
+  display: flex;
+  width: 100%;
+  height: auto;
+}
+
+img {
+  height: 200px;
+  width: 100%;
 }
