--- a/doc.css
+++ b/doc.css
@@ -1,6 +1,6 @@
 body {
   max-width: 1200px;
-  margin: 0 auto;
+  margin: 50px auto;
   box-sizing: border-box;
 }
 
@@ -21,14 +21,25 @@ header {
 }
 
 .nav-list {
+  margin: 60px auto;
   color: white;
   gap: 40px;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
   list-style: none;
+}
+
+.nav-list li {
+  font-size: 18px;
+}
+
+.nav-list a {
   text-decoration: none;
   color: white;
+}
+.nav-list a i {
+  margin-right: 15px;
 }
 
 .gallery-img {
