--- a/doc.css
+++ b/doc.css
@@ -3,11 +3,13 @@ body {
   max-width: 1200px;
   margin: 50px auto;
   box-sizing: border-box;
+  max-height: 1000px;
 }
 
 header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   height: 60px;
   width: 100%;
   border: 1px solid black;
@@ -20,29 +22,77 @@ header {
 }
 
 .search-bar {
-  margin: 20px;
-  align-items: center;
-  width: 300px;
   position: relative;
+  width: 300px;
 }
 
 .search-input {
   width: 100%;
-
+  padding: 10px 40px 10px 15px;
   border: none;
   border-radius: 20px;
-  background-color: #f4f1f1;
+  border: 1px solid beige;
+  background-color: rgb(236, 242, 234);
   font-size: 16px;
   color: #444;
 }
 
 .search-icon {
   position: absolute;
-  right: 12px;
+  right: -40px;
   top: 50%;
+
   transform: translateY(-50%);
-  pointer-events: none;
-  color: #999;
+  color: #888;
+}
+
+.notif-icons {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+}
+
+.icon-wrapper {
+  position: relative;
+  font-size: 24px;
+  color: #666;
+}
+
+.badge {
+  position: absolute;
+  top: -8px;
+  right: -10px;
+  background-color: #e91e63;
+  color: #fff;
+  font-size: 12px;
+  padding: 3px 6px;
+  border-radius: 50%;
+}
+
+.user-profile {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-left: 20px;
+}
+
+.user-pics {
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.user-name {
+  font-size: 16px;
+  color: #666;
+}
+
+.header-right {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-right: 20px;
 }
 
 .content {
@@ -50,7 +100,7 @@ header {
 }
 
 .left-side {
-  background-color: #2e2e2e;
+  background-color: grey;
   width: 20%;
   height: 800px;
 }
@@ -90,7 +140,38 @@ header {
   height: auto;
 }
 
-img {
+.gallery-img img {
   height: 200px;
   width: 100%;
+}
+
+.left-footer p {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  font-size: small;
+  text-align: center;
+  color: #444;
+}
+
+.left-side {
+  background-color: grey;
+  width: 20%;
+  height: 800px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 30px 0;
+}
+
+.left-footer {
+  text-align: center;
+  padding: 20px;
+}
+
+.left-footer p {
+  font-size: 12px;
+  color: #ccc;
+  margin: 0;
+  line-height: 1.4;
 }
