--- a/doc.css
+++ b/doc.css
@@ -23,10 +23,11 @@ header {
 
 .search-bar {
   position: relative;
-  width: 300px;
+  width: 350px;
 }
 
 .search-input {
+  outline: none;
   width: 100%;
   padding: 10px 40px 10px 15px;
   border: none;
