--- a/doc.css
+++ b/doc.css
@@ -81,7 +81,6 @@ header {
   width: 35px;
   height: 35px;
   border-radius: 50%;
-  object-fit: cover;
 }
 
 .user-name {
@@ -109,7 +108,7 @@ header {
 .nav-list {
   text-align: left;
   font-weight: 100;
-  margin: 60px auto;
+  margin: 0 auto;
   color: white;
   gap: 40px;
   display: flex;
@@ -175,4 +174,16 @@ header {
   color: #ccc;
   margin: 0;
   line-height: 1.4;
+}
+
+.hotel-info {
+  justify-content: space-between;
+  border: 1px solid black;
+  width: 100%;
+  height: 60px;
+}
+
+.stars {
+  display: flex;
+  align-items: center;
 }
