--- a/doc.css
+++ b/doc.css
@@ -180,20 +180,59 @@ header {
   padding: 20px;
   align-items: center;
   display: flex;
+  justify-content: space-between;
   gap: 20px;
   border: 1px solid black;
   width: 100%;
   height: 60px;
 }
 
+.hotel-info h2 {
+  color: gray;
+  font-weight: 100;
+  font-size: large;
+}
+
 .stars {
-  color: red;
+  color: #e91e63;
+  font-size: small;
   cursor: pointer;
 }
 
-.location .btn {
+.location {
+  text-decoration: none;
+  color: #e91e63;
   cursor: pointer;
   align-items: center;
-  border: none;
-  background-color: white;
+}
+
+.rating {
+  background-color: #e91e63;
+  width: 100px;
+  height: 100px;
+  align-items: center;
+}
+
+.rating-average {
+  display: flex;
+  color: white;
+  align-items: center;
+  font-weight: 200;
+  font-size: x-large;
+  justify-content: center;
+}
+
+.rating-count {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  font-size: small;
+  color: white;
+}
+
+.hotel-left,
+.hotel-right {
+  align-items: center;
+  gap: 20px;
+  display: flex;
 }
