--- a/doc.css
+++ b/doc.css
@@ -1,8 +1,15 @@
+* {
+  font-family: sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   font-family: sans-serif;
   max-width: 1200px;
   margin: 50px auto;
-  box-sizing: border-box;
+
   max-height: 1000px;
 }
 
@@ -97,12 +104,16 @@ header {
 
 .content {
   display: flex;
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
 }
 
 .left-side {
   background-color: grey;
+
   width: 20%;
-  height: 800px;
+  min-width: 200px;
 }
 
 .nav-list {
@@ -155,8 +166,9 @@ header {
 }
 
 .left-side {
+  padding: 10px 5px;
   background-color: grey;
-  width: 20%;
+  width: 400px;
   height: 800px;
   display: flex;
   flex-direction: column;
@@ -177,17 +189,17 @@ header {
 }
 
 .hotel-info {
-  padding: 20px;
   align-items: center;
   display: flex;
   justify-content: space-between;
-  gap: 20px;
-  border: 1px solid black;
+
+  border: 1px solid rgb(252, 242, 242);
   width: 100%;
   height: 60px;
 }
 
 .hotel-info h2 {
+  margin-left: 30px;
   color: gray;
   font-weight: 100;
   font-size: large;
@@ -206,28 +218,39 @@ header {
   align-items: center;
 }
 
-.rating {
-  background-color: #e91e63;
-  width: 100px;
-  height: 100px;
-  align-items: center;
+.hotel-card {
+  border-bottom: 1px solid #eee;
+
+  height: auto;
 }
 
-.rating-average {
+.rating {
+  background-color: #e91e63;
+  width: 60px;
+  height: 60px;
   display: flex;
-  color: white;
+  flex-direction: column;
+  gap: 10px;
   align-items: center;
-  font-weight: 200;
-  font-size: x-large;
-  justify-content: center;
 }
 
 .rating-count {
   align-items: center;
   display: flex;
   justify-content: center;
-  font-size: small;
+  font-size: x-small;
   color: white;
+  text-align: center;
+}
+
+.rating-average {
+  padding: 5px;
+  display: flex;
+  color: white;
+  align-items: center;
+  font-weight: 500;
+  font-size: large;
+  justify-content: center;
 }
 
 .hotel-left,
@@ -238,27 +261,155 @@ header {
 }
 
 .details {
+  display: flex;
+  text-align: center;
+
   height: 450px;
-  width: 500px;
-  border: 1px solid black;
+  width: 50%;
 }
 
 .description {
+  display: flex;
+  flex-direction: column;
+  font-size: small;
+  margin: 20px;
+  background-color: rgb(255, 254, 254);
+  padding: 20px 10px;
   color: #666;
-  line-height: 1.2;
+
   text-align: left;
+}
+
+.description p {
+  line-height: 1.5;
 }
 
 .left-list,
 .right-list {
-  font-size: medium;
-  color: #666;
-  text-decoration: none;
   list-style: none;
-  line-height: 1.5;
-  list-style: ;
+  padding: 0;
+  margin: 0;
+  width: 50%;
+  line-height: 1.8;
+}
+
+.hotel-bottom-section {
+  display: flex;
 }
 
 .list-about-hotel {
   display: flex;
+  justify-content: space-between;
+  gap: 60px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding: 20px 0;
+  border-top: 1px solid #eee;
+  border-bottom: 1px solid #eee;
+}
+
+.left-comments {
+  font-size: small;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.ftr-img {
+  width: 35px;
+  height: 35px;
+  border-radius: 50px;
+  margin-left: -25px;
+  border: 2px solid white;
+}
+
+.comments-right {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  padding: 20px;
+}
+
+.comment-box {
+  position: relative;
+  background-color: white;
+  border-radius: 6px;
+  padding: 25px 20px;
+}
+
+.quote-icon {
+  font-size: 150px;
+  color: #eee;
+  position: absolute;
+  top: -5px;
+  left: 5px;
+}
+
+.comment-text {
+  font-size: 14px;
+  color: #444;
+  margin-left: 25px;
+  line-height: 1.6;
+
+  position: relative;
+}
+
+.comment-footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 15px;
+}
+
+.user-info {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.user-details {
+  display: flex;
+  flex-direction: column;
+  font-size: 12px;
+  color: #999;
+}
+
+.user-name {
+  font-weight: bold;
+  font-size: 13px;
+  color: #555;
+  margin: 0;
+}
+
+.user-date {
+  font-size: 11px;
+  margin: 0;
+}
+
+.user-score {
+  font-size: 20px;
+  color: #e91e63;
+  font-weight: bold;
+}
+
+.img-comment {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: 2px solid white;
+}
+
+.show-all {
+  color: #e91e63;
+  font-size: 14px;
+  font-weight: 600;
+  text-align: center;
+  text-decoration: none;
+  display: block;
+  margin-top: 10px;
+}
+
+.hotel-bottom-section {
+  display: flex;
+  gap: 40px;
 }
