--- a/doc.css
+++ b/doc.css
@@ -194,7 +194,7 @@ header {
   justify-content: space-between;
 
   border: 1px solid rgb(252, 242, 242);
-  width: 100%;
+  width: 1000px;
   height: 60px;
 }
 
@@ -316,6 +316,10 @@ header {
   gap: 10px;
 }
 
+.left-comments p {
+  display: flex;
+}
+
 .ftr-img {
   width: 35px;
   height: 35px;
@@ -325,6 +329,7 @@ header {
 }
 
 .comments-right {
+  max-width: 400px;
   display: flex;
   flex-direction: column;
   gap: 25px;
